# master-security-framework

./: README.md
.github/workflows/: ci-python.yml  ci-typescript.yml  release.yml
master_security_python/: pyproject.toml
master_security_python/src/master_security/ai/: __init__.py
master_security_python/src/master_security/api/: __init__.py
master_security_python/src/master_security/auth/: __init__.py
master_security_python/src/master_security/cloud/: __init__.py
master_security_python/src/master_security/core/: __init__.py  cache.py  config.py  events.py  exceptions.py  logger.py  metrics.py  policy.py  telemetry.py
master_security_python/src/master_security/crypto/: __init__.py
master_security_python/src/master_security/defensive/: __init__.py
master_security_python/src/master_security/enterprise/: __init__.py
master_security_python/src/master_security/file/: __init__.py
master_security_python/src/master_security/honeypot/: __init__.py
master_security_python/src/master_security/integrations/: __init__.py
master_security_python/src/master_security/monitoring/: __init__.py
master_security_python/src/master_security/network/: __init__.py
master_security_python/src/master_security/web/: __init__.py
