[build-system]
requires = ["hatchling>=1.26.0", "hatch-vcs>=0.4.0"]
build-backend = "hatchling.build"

[project]
name = "master-security"
version = "1.0.0"
description = "Master Security Framework - Advanced modular security SDK for 2026+ environments"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.14"
authors = [{ name = "Master Security Team" }]
keywords = ["security", "zero-trust", "ai-security", "post-quantum", "cryptography", "threat-detection", "honeypot", "compliance", "runtime-security", "adaptive-defense"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Typing :: Typed",
]

dependencies = [
    "cryptography>=44.0.0",
    "pynacl>=1.5.0",
    "pydantic>=3.0.0",
    "structlog>=24.0.0",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "httpx>=0.28.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "anyio>=4.0.0",
    "blake3>=1.0.0",
    "argon2-cffi>=23.0.0",
    "pyjwt>=2.10.0",
    "pyotp>=2.9.0",
    "yara-python>=4.5.0",
    "onnxruntime>=1.20.0",
    "prometheus-client>=0.21.0",
    "aiofiles>=24.0.0",
    "python-multipart>=0.0.18",
    "email-validator>=2.2.0",
    "dnspython>=2.7.0",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.115.0", "uvicorn>=0.34.0"]
django = ["django>=5.1.0"]
flask = ["flask>=3.1.0"]
celery = ["celery>=5.4.0"]
pytorch = ["torch>=2.6.0"]
full = ["master-security[fastapi,django,flask,celery,pytorch]"]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.25.0", "pytest-cov>=6.0.0", "pytest-benchmark>=5.0.0", "hypothesis>=6.120.0", "mypy>=1.14.0", "ruff>=0.9.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/master_security"]

[tool.ruff]
target-version = "py314"
line-length = 120
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.14"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=master_security --cov-report=term-missing"
